# crowe-codex

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  security-scan.yml
examples/: basic_usage.py  security_audit.py
src/claude_codex/: __init__.py  cli.py
src/claude_codex/core/: claude_agent.py  codex_agent.py  engine.py  nim_agent.py  ollama_agent.py  pipeline.py  result.py
src/claude_codex/fitness/: __init__.py
src/claude_codex/plugins/: __init__.py
src/claude_codex/security/: __init__.py
src/claude_codex/strategies/: __init__.py  adversarial.py  base.py  consensus.py
src/crowe_codex/: __init__.py  cli.py
src/crowe_codex/cloud/: __init__.py  dashboard.py  marketplace.py  routing_sync.py
src/crowe_codex/core/: agent.py  auth.py  claude_agent.py  codex_agent.py  engine.py  nim_agent.py  ollama_agent.py  pipeline.py  result.py
src/crowe_codex/fitness/: __init__.py  quality.py  runner.py
src/crowe_codex/persistence/: __init__.py
src/crowe_codex/plugins/: loader.py
src/crowe_codex/security/: __init__.py  attestation.py  compliance.py  owasp.py  supply_chain.py  threat_model.py
src/crowe_codex/strategies/: __init__.py  adversarial.py  base.py  consensus.py  evolutionary.py  mesh.py  pipeline_strategy.py  router.py  verification.py
tests/: test_adversarial.py  test_agent.py  test_attestation.py  test_auth.py  test_claude_agent.py  test_cli.py  test_codex_agent.py  test_compliance.py  test_consensus.py  test_dashboard.py  test_engine.py  test_evolutionary.py  test_fitness.py  test_marketplace.py  test_mesh.py  test_nim_agent.py  test_ollama_agent.py  test_owasp.py  test_pipeline_strategy.py  test_plugins.py  test_result.py  test_router.py  test_routing_sync.py  test_strategy_base.py  test_supply_chain.py  test_threat_model.py  test_verification.py
