[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crowe-codex"
version = "2.0.0"
description = "Cross-vendor adversarial AI code verification engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Michael Crowe", email = "crowelogic@users.noreply.github.com" },
]
keywords = ["ai", "security", "code-verification", "claude", "codex", "adversarial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.60.0",
    "ollama>=0.4.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
nim = [
    "nvidia-nim>=0.1.0",
]

[project.scripts]
crowe-codex = "crowe_codex.cli:main"

[project.urls]
Homepage = "https://github.com/MichaelCrowe11/crowe-codex"
Documentation = "https://github.com/MichaelCrowe11/crowe-codex#readme"
Issues = "https://github.com/MichaelCrowe11/crowe-codex/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/crowe_codex"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
